Added warning to advanced debugging Chrome URLs.

--- a/flags/templates/advanced.html
+++ b/flags/templates/advanced.html
@@ -53,7 +53,7 @@
 
     <div class="row-fluid">
         <div class="span9 well well-large">
-            <h4><strong>List of Chrome URLs used only for debugging</strong></h4>
+            <h4><strong>List of Chrome URLs used only for debugging (be careful!)</strong></h4>
             <ul>
                 <li>chrome://crash</li>
                 <li>chrome://kill</li>
