--- a/flags/templates/details.html
+++ b/flags/templates/details.html
@@ -8,6 +8,7 @@
 
     <h3><strong>{{ flag.name }}</strong></h3>
 
+    {# Details #}
     <div class="row-fluid">
         <div class="span9 well well-large">
             <p>
@@ -35,8 +36,10 @@
     {# Comments #}
     <div class="row-fluid">
         <div class="span9 well well-large">
-            <p><i class="icon-comment"></i>&nbsp;{{ comment_count }} comment{{ comment_count|pluralize }}</p><br>
-            <!-- {% render_comment_list for flag %} -->
+            <p>
+                <i class="icon-comment"></i>&nbsp;{{ comment_count }} comment{{ comment_count|pluralize }}
+            </p>
+            <br>
             {% for comment in comment_list %}
                 <div class="comment">
                     <p><strong>{{ comment.user_name }}</strong>&nbsp;<em>{{ comment.submit_date }}</em></p>
@@ -47,6 +50,6 @@
                 {% render_comment_form for flag %}
             </div>
         </div>
-    </div>
+    </div><!--/row-->
 
 {% endblock %}
