Updated templates with nav bars with active page indicated.

--- a/flags/templates/advanced.html
+++ b/flags/templates/advanced.html
@@ -1,5 +1,5 @@
 {% extends "base.html" %}
-{% block title %}Advanced Settings?{% endblock %}
+{% block title %}Advanced Settings{% endblock %}
 
 {% block content %}
 
@@ -66,4 +66,4 @@
         </div>
     </div><!--/row-->
 
-{% endblock %}
+{% endblock content %}
