--- a/flags/templates/comments/posted.html
+++ b/flags/templates/comments/posted.html
@@ -3,8 +3,10 @@
 {% block title %}Thanks for Commenting{% endblock %}
 
 {% block content %}
+
     <h3>Thank you for your comment!</h3>
     <a href="/flags/{{ comment.object_pk }}">Return to this Flag's page.</a>
     <br>
     <br>
-{% endblock %}
+
+{% endblock content %}
