--- a/flags/templates/contact.html
+++ b/flags/templates/contact.html
@@ -1,6 +1,20 @@
 {% extends "base.html" %}
 {% block title %}Contact Me{% endblock %}
 
+{% block navlinks %}
+
+    <div class="nav-collapse">
+        <ul class="nav">
+            <li><a href="/"><i class="icon-home icon-white"></i>&nbsp;Home</a></li>
+            <li><a href="/list"><i class="icon-list icon-white"></i>&nbsp;List</a></li>
+            <li><a href="/info"><i class="icon-info-sign icon-white"></i>&nbsp;Info</a></li>
+            <li><a href="/about"><i class="icon-briefcase icon-white"></i>&nbsp;About</a></li>
+            <li class="active"><a href="/contact"><i class="icon-envelope icon-white"></i>&nbsp;Contact</a></li>
+        </ul>
+    </div><!--/.nav-collapse -->
+
+{% endblock navlinks %}
+
 {% block content %}
 
     <div class="row-fluid">
@@ -43,6 +57,7 @@
                     {{ form.cc_myself }}
                 </div>
                 <br>
+
                 {# Submit #}
                 <input type="submit" value="Submit" />
             </form>
@@ -50,4 +65,4 @@
         </div>
     </div><!--/row-->
 
-{% endblock %}
+{% endblock content %}
