--- a/flags/templates/details.html
+++ b/flags/templates/details.html
@@ -2,6 +2,7 @@
 {% block title %}Flag Details{% endblock %}
 
 {% block content %}
+
     {% load comments %}
     {% get_comment_count for flag as comment_count %}
     {% get_comment_list for flag as comment_list %}
@@ -52,4 +53,4 @@
         </div>
     </div><!--/row-->
 
-{% endblock %}
+{% endblock content %}
