--- a/flags/templates/info.html
+++ b/flags/templates/info.html
@@ -1,6 +1,20 @@
 {% extends "base.html" %}
 {% block title %}What is ChromeFiddle?{% endblock %}
 
+{% block navlinks %}
+
+    <div class="nav-collapse">
+        <ul class="nav">
+            <li><a href="/"><i class="icon-home icon-white"></i>&nbsp;Home</a></li>
+            <li><a href="/list"><i class="icon-list icon-white"></i>&nbsp;List</a></li>
+            <li class="active"><a href="/info"><i class="icon-info-sign icon-white"></i>&nbsp;Info</a></li>
+            <li><a href="/about"><i class="icon-briefcase icon-white"></i>&nbsp;About</a></li>
+            <li><a href="/contact"><i class="icon-envelope icon-white"></i>&nbsp;Contact</a></li>
+        </ul>
+    </div><!--/.nav-collapse -->
+    
+{% endblock navlinks %}
+
 {% block content %}
 
     <div class="row-fluid">
@@ -16,12 +30,15 @@
     <div class="row-fluid">
         <div class="span9 well well-large">
             <h4><strong>What is this and why do I want it?</strong></h4>
+
             <p>Each Google Chrome release, <a href="https://www.google.com/intl/en/chrome/browser/index.html" target="_blank">Stable</a>, <a href="https://www.google.com/intl/en/chrome/browser/beta.html" target="_blank">Beta</a>, and <a href="https://www.google.com/intl/en/chrome/browser/index.html" target="_blank">Canary</a>, has unique experimental settings that are not enabled by default. Some of these settings control exciting new web features such as real-time <a href="http://www.webrtc.org">WebRTC</a>, <a href="http://www.chromium.org/spdy">SPDY</a>, and <a href="https://developers.google.com/native-client/">Native Client (NaCl)</a>. While these cutting-edge features are just appearing in your browser today, many of these features will gain stability and go on to be significant updates in future Google Chrome releases.</p>
+
             <p>That said, there are reasons that Google hasn't enabled these settings and features by default. Some of these reasons may include performance and stability concerns so be mindful and disable any settings that cause issues. Don't forget, the settings you enable in chrome://flags will be active for all Chrome users.</p>
+
             <p>Each operating system, <a href="/mac"><span class="label label-mac-os-x">Mac OS X</span></a>, <a href="/windows"><span class="label label-windows">Windows</span></a>, <a href="/linux"><span class="label label-linux">Linux</span></a>, <a href="/chrome-os"><span class="label label-chrome-os">Chrome OS</span></a>, and <a href="/android"><span class="label label-android">Android</span></a>, all have a different set of experimental settings they can support. Some features may be exclusive to just one operating system.</p>
 
             <p>To get a look at even more settings and features, check out our <a href="/advanced">advanced</a> page.</p>
         </div>
     </div>
 
-{% endblock %}
+{% endblock content %}
