--- a/flags/templates/list.html
+++ b/flags/templates/list.html
@@ -1,9 +1,23 @@
 {% extends "base.html" %}
 {% block title %}All Flags{% endblock %}
 
+{% block navlinks %}
+
+    <div class="nav-collapse">
+        <ul class="nav">
+            <li><a href="/"><i class="icon-home icon-white"></i>&nbsp;Home</a></li>
+            <li class="active"><a href="/list"><i class="icon-list icon-white"></i>&nbsp;List</a></li>
+            <li><a href="/info"><i class="icon-info-sign icon-white"></i>&nbsp;Info</a></li>
+            <li><a href="/about"><i class="icon-briefcase icon-white"></i>&nbsp;About</a></li>
+            <li><a href="/contact"><i class="icon-envelope icon-white"></i>&nbsp;Contact</a></li>
+        </ul>
+    </div><!--/.nav-collapse -->
+
+{% endblock navlinks %}
+
 {% block content %}
 
-    <h4 xmlns="http://www.w3.org/1999/html"><strong>{{ all_flags.count }}</strong> flags total</h4>
+    <h4><strong>{{ all_flags.count }}</strong> flags total</h4>
 
     {% for flag in all_flags %}
         <div class="row-fluid">
@@ -32,4 +46,4 @@
         </div><!--/row-->
     {% endfor %}
 
-{% endblock %}
+{% endblock content %}
