Optimizing home page for mobile devices.

--- a/flags/templates/home.html
+++ b/flags/templates/home.html
@@ -18,7 +18,7 @@
 {% block content %}
 
     <div class="row-fluid">
-        <div class="span3">
+        <div class="span3 visible-desktop">
             <div class="well sidebar-nav">
                 <ul class="nav nav-list">
                     <li class="nav-header">Operating System</li>
@@ -35,7 +35,7 @@
                 <h1>Experiment with Google Chrome</h1>
                 <p>Navigate to <a href="chrome://flags" target="_blank">chrome://flags</a> in your Google Chrome URL bar to view cutting-edge features that haven't made it into the latest release yet.</p>
                 <p>We have detected that you are running <strong>{{ browser.name }} {{ browser.version }}</strong> on <strong>{{ os }}</strong>.</p>
-                <p><a class="btn btn-primary btn-medium" href="/info">Learn more »</a></p>
+                <p><a class="btn btn-primary btn-medium bump-down" href="/info">Learn more »</a></p>
             </div>
 
             {% if os_slug == 'mac-os-x' %}
