Changed list URL to flags (REST).

--- a/flags/templates/base.html
+++ b/flags/templates/base.html
@@ -75,7 +75,7 @@
                     <div class="nav-collapse">
                         <ul class="nav">
                             <li><a href="/"><i class="icon-home icon-white"></i>&nbsp;Home</a></li>
-                            <li><a href="/list"><i class="icon-list icon-white"></i>&nbsp;List</a></li>
+                            <li><a href="/flags"><i class="icon-list icon-white"></i>&nbsp;List</a></li>
                             <li><a href="/info"><i class="icon-info-sign icon-white"></i>&nbsp;Info</a></li>
                             <li><a href="/about"><i class="icon-briefcase icon-white"></i>&nbsp;About</a></li>
                             <li><a href="/contact"><i class="icon-envelope icon-white"></i>&nbsp;Contact</a></li>
