Added center class to CSS.

--- a/src/css/chromefiddle-site.css
+++ b/src/css/chromefiddle-site.css
@@ -76,6 +76,12 @@
 
 /* Utility Styles */
 
+.center {
+	float: none;
+	margin-left: auto;
+	margin-right: auto;
+}
+
 .bump-down {
 	margin-top: 10px;
 }
