Updated 404 and 500 error pages.

--- a/flags/templates/500.html
+++ b/flags/templates/500.html
@@ -77,8 +77,16 @@
 
     <div class="row-fluid">
         <h2>500 Error - Server Error!</h2>
-        <p>Our server is having trouble handling your request. Please go back <a href="/">home</a> and try your request again.</p>
+        <p>The server is having trouble handling your request. Please go back <a href="/">home</a> and try your request again.</p>
     </div><!--/row-->
+
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
 
     <!--footer-->
     <hr>
