--- a/flags/templates/base.html
+++ b/flags/templates/base.html
@@ -8,7 +8,9 @@
     <title>{% block title %}Template Title{% endblock %}</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="A site to track experimental settings for Google Chrome's browser">
+    
     <meta name="author" content="Peter Schaadt">
+    <link type="text/plain" rel="author" href="{{ SITE_URL }}/humans.txt" />
 
     <!-- Styles -->
     <link href="{{ STATIC_URL }}css/bootstrap.css" rel="stylesheet">
